# sysadmin

./: cscope_db_generator.sh  git_server.sh  misc-wrapper.py  movie_dependecies.sh  progress.sh  sdk-wrapper.py  setup_env.sh  sys_cleaner.sh  tmux.conf  toolchain.cmake  vimrc.conf  weather.sh  whatsmyip.sh
ansible/: developer.yml  docker_ubuntu.yml  dokuwiki.yml  inventory_example  st.dockerfile  vsftp.yml
ansible/developer/: developer.yml
ansible/developer/byobu/: keybindings.tmux  status
ansible/developer/vim/: vim.yml  vimrc.conf
ansible/developer/vim/developer/cpp/: CMakeLists.txt
ansible/developer/wip/: 01_centos6_prerequisites_install.sh  02_python_install.sh  03_cmake_install.sh  04_gcc_install.sh  05_ccache_install.sh  06_clang_install.sh  07_vim_install.sh  clang_install.sh  install_gcc.txt  setup_developer_centos.txt
ansible/dnsmasq/: ad_hosts  dnsmasq.j2  dnsmasq.yml
cloud-init/: cloud-config.yml
developer/comment/: comment.py
developer/cpp/: CMakeLists.txt.sample
openvpn/: openssl.cnf  openvpn@.service  server.conf  setup.sh
vimrc/: vimrc
vimrc/python/: skeleton
wekan/: mongod.service  setup.sh  wekan.service
